[project]
name = "pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.5.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "xarray>=2025.6.1",
]
